# jindai

./: .dockerignore  .gitignore  .gitmodules  .ipython-startup.py  .pylintrc  Dockerfile  LICENSE  PyMongoWrapper  README-queryexpr.docx  README-queryexpr.md  README.md  api.py  cli-utils.py  config.py  config.py.sample  config.yaml.sample  datasource.py  docker-compose.yaml.sample  gallery-batchwork.py  gallery.py  helpers.py  models.py  nginx.conf-snippet.sample  pipeline-test.py  pipeline.py  plugin.py  pyproject.toml  requirements.txt  scheduler.py  schema.sql  site.wsgi  sources  start.sh  startup.py  storage.py  task.py  ui-sync.bat  update-pymongowrapper
articlecompletion/: __init__.py  checkpoint  config.json
autorating/: __main__.py  common.py  dataset.py  inference_model.py  model.py  trainer.py
blockly/: README  index.html  main.js
datasources/: autocompletion.py  bibliodatasource.py  dbquerydatasource.py  exceldatasource.py  gallerydatasource.py  htmldatasource.py  imagedatasource.py  minjiangushijicheng.py  pdfdatasource.py  twitterdatasource.py  utils.py  worddatasource.py
jindai/: __init__.py  __main__.py  api.py  app.py  common.py  config.py  dbquery.py  helpers.py  maintenance.py  mcp.py  models.py  oauthserv.py  pdfutils.py  pipeline.py  plugin.py  resources.py  storage.py  task.py  worker.py  wsgi.py
jindai/storage/: __init__.py  fragment_handlers.py  hdf5manager.py  osfile.py  smbclient.py  sqlitemanager.py  storage.py  webmanager.py
jindai/worker/: __init__.py  models.py  worker_manager.py
pipelines/: basics.py  controls.py  dbquerydatasource.py  filters.py  galleryprocs.py  hanlpmul.py  hanzi.py  htmldatasource.py  imageadv.py  imagennproc.py  imageproc.py  japanese.py  jiayancuts.py  kmeans.py  mt.py  ner.py  ocr.py  officedocdatasource.py  pdfdatasource.py  pmient.py  sentiment.py  tfidf.py  topics.py  twitterdatasource.py  utils.py  westernlang.py
plugins/: annotating.py  autocompletion.py  autotagging.py  bibliography.py  cloudsearch.py  gallery.py  hanzi.py  hdf5manager.py  iiifapi.py  imagethumbhandler.py  jiayancuts.py  llm.py  mdict.py  mt.py  ner.py  oauthclient.py  onedrive.py  opds.py  pdfpnghandler.py  pgvector.py  scheduler.py  sentiment.py  smbclient.py  sqlitemanager.py  taskqueue.py  zbooksearcher.py  ziphandler.py
plugins/amaplbs/: __init__.py
plugins/autorating/: __init__.py  __main__.py  common.py  dataset.py  inference_model.py  model.py  trainer.py
plugins/bibliography/: __init__.py  deduplicator.py  models.py  stages.py
plugins/bibliography/datasources/: __init__.py  calibre.py  calibre_models.py  zotero.py
plugins/blockly/: README  __init__.py  index.html  main.js
plugins/dada/: __init__.py  dada.md  dada.py
plugins/datasources/: __init__.py  aggregator.py  calibredatasource.py  dbquerydatasource.py  filepatterndatasource.py  fileupload.py  htmldatasource.py  minerudatasource.py  officedocdatasource.py  pdfdatasource.py  textdatasource.py  tuchongdatasource.py  twitterdatasource.py
plugins/facedet/: __init__.py  facedetectcnn.py  libfacedetection.so1
plugins/gallery/: __init__.py  imageproc.py  ocr.py
plugins/hanzi/: __init__.py
plugins/hashing/: __init__.py  compare.html
plugins/image_captioning/: __init__.py
plugins/imageproc/: __init__.py  demucs.py  imageproc.py  ocr.py
plugins/jiayan/: __init__.py
plugins/lbs/: __init__.py
plugins/nima/: __init__.py  test.py
plugins/pipelines/: __init__.py  basics.py  controls.py  dbquerydatasource.py  dtextract.py  faiss_search.py  hanzi.py  htmldatasource.py  kmeans.py  mt.py  ner.py  officedocdatasource.py  pdf_stages.py  pdfdatasource.py  pmient.py  sentiment.py  tfidf.py  topics.py  twitterdatasource.py
plugins/scheduler/: __init__.py
plugins/shortcuts/: __init__.py  shortcuts.html
plugins/taskqueue/: __init__.py  announcer.py  localqueue.py  remotequeue.py  taskqueue.py
plugins/twiimg/: __init__.py
plugins/workermanager/: __init__.py  logger.py  worker_manager.py
static/: style.css  trad2simp.js
supervisor/: jindai.conf  supervisord.conf
templates/: index.html  login.html  redirect.html  view.html
